<resources>
    <string name="app_name">Motus</string>
    <string name="try_limite">Nombre d\'essai :</string>
    <string name="guess_word">mot à deviner</string>
    <string name="input_word">Saisir le mot correspondant..</string>
    <string name="try_counter">Coups :</string>
    <string name="score_counter">Score :</string>
    <string name="guess">Deviner</string>
    <string name="generate">Autre mot</string>
    <string name="inputed_word">mot saisit</string>
    <string name="title">Title</string>
    <string name="content">content</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="guessed_word">Le mot à deviner était</string>
    <string name="congrats">\"Bravo vous avez deviné le mot ! \"</string>
    <string name="shame">Dommage vous n\'avez pas pu deviner le mot</string>
</resources>