<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_try_limite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/design_default_color_primary_dark"
        android:gravity="center"
        android:text="@string/try_limite"
        android:textColor="@color/yellow"
        />

    <TextView
        android:id="@+id/textview_guess_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/guess_word"
        android:textColor="@color/black"

        />
    <TextView
        android:id="@+id/textview_inputed_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inputed_word"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/edittext_input_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="casual"
        android:hint="@string/input_word"
        android:inputType="text"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp">

        <TextView
            android:id="@+id/textview_score_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/score_counter"
            android:textColor="@color/design_default_color_primary_variant" />

        <TextView
            android:id="@+id/textview_try_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/try_counter"
            android:textColor="@color/design_default_color_primary_dark" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/button_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            app:backgroundTint="@color/red" />

    </LinearLayout>


</LinearLayout>